# easy-tauri

./: .gitignore  README.md  app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
assets/: base.css
pages/: index.vue
pages/discuss/: index.vue
pages/search/: index.vue
pages/user/: index.vue
src-tauri/: Cargo.toml  tauri.conf.json
